# fulci

./: .gitignore  ChangeLog  LICENSES.org  Makefile.am  Makefile.in  README.org  README.txt  aclocal.m4  compare_version.awk  configure  configure.ac  fulci.asd  quick_quicklisp.sh.in
data/: countries.csv
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  en@boldquot.po  en@quot.po  fulci.pot  it.po
src/: bs-tree.lisp  conditions.lisp  config.lisp.in.in  constants.lisp  db-utils.lisp  db.lisp  filesystem-utils.lisp  icons.lisp  image-utils.lisp  import-tsv.lisp  json-rpc2.lisp  main-frame.lisp  main-toolbar.lisp  main.lisp  manage-copies.lisp  manage-movie.lisp  menu-commands.lisp  misc-utils.lisp  net-utils.lisp  nodgui-utils.lisp  package.lisp  preferences.lisp  ps-utils.lisp  rb-tree.lisp  search-copies-frame.lisp  search-copy-expr.lisp  search-expr.lisp  search-frame.lisp  search-title-expr.lisp  search-titles-frame.lisp  text-utils.lisp  validation.lisp  wikipedia.lisp
src/tests/: all-tests.lisp  package.lisp  test-jsonrpc.lisp  test-search-expr.lisp
